[project]
name = "worldtimezone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10.4",
    "dateparser>=1.2.0",
    "hikari-lightbulb<3.0.0",
    "hikari-miru>=4.1.1",
    "hikari[speedups]>=2.0.0",
    "peewee>=3.17.6",
    "pytz>=2024.1",
    'uvloop>=0.21.0 ; platform_system != "Windows"',
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"

[tool.uv]
dev-dependencies = [
    "types-peewee>=3.17.6.20240813",
]
